# browniecorrector

./: CMakeLists.txt  README.md  browniecorrection.kdev4
bashScripts/: .directory  brownie.sh  bwa.sh  calsimbrownieAligner.sh  louvain.sh  runPipeLine.sh
pythonScripts/: extractClusters.py  trimmer.py
src/: CMakeLists.txt  alignment.cpp  alignment.h  arc.h  brownie.cpp  brownie.h  bubbleDetection.cpp  correctgraph.cpp  correctgraph.h  coverage.cpp  dsnode.cpp  dsnode.h  flowCorrection.cpp  global.h  graph.cpp  graph.h  graphaln.cpp  graphaln.h  kmercounttable.cpp  kmercounttable.h  kmernpp.cpp  kmernpp.h  kmeroverlap.cpp  kmeroverlap.h  kmeroverlaptable.cpp  kmeroverlaptable.h  kmertable.cpp  kmertable.h  library.cpp  library.h  markovChain.cpp  markovChain.h  nodechain.cpp  nodechain.h  nodeendstable.cpp  nodeendstable.h  nucleotide.cpp  nucleotide.h  readcorrection.cpp  readcorrection.h  (+11 more)
src/readClusteringSrc/: all2allOL.cpp  calSim.cpp  calSim.h  connectedComponent.cpp  extractReads.cpp  extractReads.h  kmerObserver.cpp  kmerObserver.h  main.cpp  undGraph.h
src/readfile/: fastafile.cpp  fastafile.h  fastqfile.cpp  fastqfile.h  rawfile.cpp  rawfile.h  readfile.cpp  readfile.h  samfile.cpp  samfile.h  sequencefile.cpp  sequencefile.h
unittest/: alignmenttest.cpp  kmermdtest.cpp  kmertest.cpp  mmtest.cpp  nucleotidetest.cpp  readfiletest.cpp  scaffoldtest.cpp  tstringtest.cpp  utiltest.cpp
